@@ -8,6 +8,11 @@ Changes - Apache::Test change logfile
 
 =item 1.33-dev
 
+https://rt.cpan.org/Public/Bug/Display.html?id=32993
+use TAP::Harness for Apache::TestHarnessPHP
+[Mark A. Hershberger]
+
+
 https://rt.cpan.org/Public/Bug/Display.html?id=54476
 Fix error where non root user gets test failure with httpd suexec and mod_fcgid
 [Peter (Stig) Edwards]
